--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,155 +1,159 @@
-<div class="row-fluid">
-  <div class="span12">
-    <ul class="inline">
-      <li>
-        <div class="btn-group">
-          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-            Change Event
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <% @events.each do |e| %>
-            <li><%= link_to "#{truncate(e.title, length: 10)} | #{e.location.city} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
-            <% end %>
-          </ul>
-        </div>
-      </li>
-      <li class="muted"><span class="well well-small"><%= "#{truncate(@event.title)} | #{@event.location.city} | #{@event.date.strftime('%d %b')}" %></span></li>
+<% if @event.state_cancelled? %>
+  <h3>This Event was cancelled, contact support to request reactivation or <%= link_to "create a new one", new_organizer_event_path %>.</h3>
+<% else %>
+  <div class="row-fluid">
+    <div class="span12">
+      <ul class="inline">
+        <li>
+          <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              Change Event
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% @events.each do |e| %>
+              <li><%= link_to "#{truncate(e.title, length: 10)} | #{e.location.city} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
+              <% end %>
+            </ul>
+          </div>
+        </li>
+        <li class="muted"><span class="well well-small"><%= "#{truncate(@event.title)} | #{@event.location.city} | #{@event.date.strftime('%d %b')}" %></span></li>
 
-       <li class="pull-right"><%= render 'search' %></li>
-    </ul>
+         <li class="pull-right"><%= render 'search' %></li>
+      </ul>
+    </div>
   </div>
-</div>
-<div class="row-fluid">
-  <div class="span12">
-    <ul class="inline">
-      <li><h3><i class="icon-dashboard"></i></h3></li>
-      <li><span class="label label-info">Time left <i class="icon-time"></i><%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></span></li>
-      <li><span class="label label-info">Funding <i class="icon-money"></i> <%= number_to_currency(@event.orders.funding.sum(:total)) %></span></li>
-      <li><span class="label label-info">unsold tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %></span></li>
-      <li><%= @decorated_event.payments_locked? %></li>
-      <li><%= @decorated_event.private_or_public %></li>
-    </ul>
+  <div class="row-fluid">
+    <div class="span12">
+      <ul class="inline">
+        <li><h3><i class="icon-dashboard"></i></h3></li>
+        <li><span class="label label-info">Time left <i class="icon-time"></i><%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></span></li>
+        <li><span class="label label-info">Funding <i class="icon-money"></i> <%= number_to_currency(@event.orders.funding.sum(:total)) %></span></li>
+        <li><span class="label label-info">unsold tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %></span></li>
+        <li><%= @decorated_event.payments_locked? %></li>
+        <li><%= @decorated_event.private_or_public %></li>
+      </ul>
+    </div>
   </div>
-</div>
-<hr>
-<%= form_tag charge_or_refund_orders_path, method: :post  do %>
-<div class="row-fluid">
-  <aside class="span3 well well-small">
-    <div class="accordion" id="accordion2">
-      <% unless current_user.guest? %>
+  <hr>
+  <%= form_tag charge_or_refund_orders_path, method: :post  do %>
+  <div class="row-fluid">
+    <aside class="span3 well well-small">
+      <div class="accordion" id="accordion2">
+        <% unless current_user.guest? %>
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
+                <i class="icon-user"></i> Authorized Users <i class="icon-plus itoggle"></i>
+              </a>
+            </div>
+            <div id="collapseFive" class="accordion-body collapse">
+              <div class="accordion-inner">
+                <ul class="nav nav-tabs nav-stacked">
+                <% @event.event_users.each do |eu| %>
+                  <li><%= truncate(eu.user.profile.email, length: 14) %>  <span class="label pull-right"><%= eu.state %> </span></li>
+                <% end %>
+                  <li><hr></li>
+                  <li><span><%= link_to raw('Add or edit Authorized Users <i class="icon-external-link"></i>'), organizer_event_event_users_path(@event), target: '_blank' if @decorated_event.event_admin? %> </span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        <% end %>
+
+      <% if current_user.event_users.where(event_id: @event.id).first.state_organizer?  %>
         <div class="accordion-group">
           <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
-              <i class="icon-user"></i> Authorized Users <i class="icon-plus itoggle"></i>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+              <i class="icon-credit-card"></i> Charge Options <i class="icon-plus itoggle"></i>
             </a>
           </div>
-          <div id="collapseFive" class="accordion-body collapse">
+          <div id="collapseOne" class="accordion-body collapse">
             <div class="accordion-inner">
               <ul class="nav nav-tabs nav-stacked">
-              <% @event.event_users.each do |eu| %>
-                <li><%= truncate(eu.user.profile.email, length: 14) %>  <span class="label pull-right"><%= eu.state %> <%= eu.payment_lock ? raw('<i class="icon-lock"></i>') : raw('<i class="icon-unlock"></i>') %></span></li>
-              <% end %>
-                <li><hr></li>
-                <li><span><%= link_to raw('Add or edit Authorized Users <i class="icon-external-link"></i>'), organizer_event_event_users_path(@event), target: '_blank' if @decorated_event.event_admin? %> </span></li>
+                <li><a><%= @decorated_event.lock %></a></li>
+                <li><%= link_to "Charge All", charge_all_orders_path(event_id: @event.id), method: :post, class: "" %></li>
+                <li><%= submit_tag "Charge Selected", name: 'charge', class: "link-button span12" if current_user.api_key %></li>
+                <li><%= submit_tag "Refund Selected", name: 'refund', class: "link-button span12" if current_user.api_key %></li>
+                <li><%= submit_tag "Cancel Selected", name: 'cancel', class: "link-button span12" if current_user.api_key %></li>
+                <li><%= link_to "Cancel Event", organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" }, method: :delete %></li>
               </ul>
             </div>
           </div>
         </div>
       <% end %>
-
-    <% if current_user.event_users.where(event_id: @event.id).first.state_organizer?  %>
-      <div class="accordion-group">
-        <div class="accordion-heading">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-            <i class="icon-credit-card"></i> Charge Options <i class="icon-plus itoggle"></i>
-          </a>
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+              <i class="icon-tasks"></i> Event Options <i class="icon-plus itoggle"></i>
+            </a>
+          </div>
+          <div id="collapseTwo" class="accordion-body collapse">
+            <div class="accordion-inner">
+              <ul class="nav nav-tabs nav-stacked">
+                <li><%= link_to "View Event", event_path(@event), class: "" unless @event.state_cancelled? %></li>
+                <li><a><%= @decorated_event.toggle_visible %></a></li>
+                <li><%= link_to "New Event", new_organizer_event_path(@event), class: "" %></li>
+                <li><%= link_to "Edit Event", edit_organizer_event_path(@event), class: "" unless @event.state_cancelled? %></li>
+                <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf"), class: "" %></li>
+                <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "" %></li>
+                <li><%= link_to "Check-in View", organizer_event_tickets_path(@event), class: "" unless @event.state_cancelled? %></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div id="collapseOne" class="accordion-body collapse">
-          <div class="accordion-inner">
-            <ul class="nav nav-tabs nav-stacked">
-              <li><a><%= @decorated_event.lock %></a></li>
-              <li><%= link_to "Charge All", charge_all_orders_path(event_id: @event.id), method: :post, class: "" %></li>
-              <li><%= submit_tag "Charge Selected", name: 'charge', class: "link-button span12" if current_user.api_key %></li>
-              <li><%= submit_tag "Refund Selected", name: 'refund', class: "link-button span12" if current_user.api_key %></li>
-              <li><%= submit_tag "Cancel Selected", name: 'cancel', class: "link-button span12" if current_user.api_key %></li>
-              <li><%= link_to "Cancel Event", organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" }, method: :delete %></li>
-            </ul>
+        <div class="accordion-group" is="event-accordian">
+          <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+              <i class="icon-filter"></i> Filter Orders <i class="icon-minus itoggle"></i>
+            </a>
+          </div>
+          <div id="collapseThree" class="accordion-body collapse in">
+            <div class="accordion-inner">
+              <ul class="nav nav-tabs nav-stacked">
+                <li><a href="<%= organizer_event_path(@event) %>">All<span class="badge badge-info pull-right"><%= @event.orders.sum(:quantity) %></span></a></li>
+                <li><a href="<%= request.path + '?pending=true' %>">Ordered<span class="badge badge-warning pull-right"><%= @event.orders.pending.sum(:quantity) %></span></a></li>
+                <li><a href="<%= request.path + '?tickets_sent=true' %>">Paid<span class="badge badge-success pull-right"><%= @event.orders.tickets_sent.sum(:quantity) %></span></a></li>
+                <li><a href="<%= request.path + '?failed=true' %>">Failed<span class="badge badge-important pull-right"><%= @event.orders.failed.sum(:quantity) %></span></a></li>
+                <li><a href="<%= request.path + '?refunded=true' %>">Refunded<span class="badge badge-inverse pull-right"><%= @event.orders.refunded.sum(:quantity) %></span></a></li>
+                <li><a href="<%= request.path + '?refunded=true' %>">Cancelled<span class="badge pull-right"><%= @event.orders.cancelled.sum(:quantity) %></span></a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    <% end %>
-      <div class="accordion-group">
-        <div class="accordion-heading">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-            <i class="icon-tasks"></i> Event Options <i class="icon-plus itoggle"></i>
-          </a>
-        </div>
-        <div id="collapseTwo" class="accordion-body collapse">
-          <div class="accordion-inner">
-            <ul class="nav nav-tabs nav-stacked">
-              <li><%= link_to "View Event", event_path(@event), class: "" unless @event.state_cancelled? %></li>
-              <li><a><%= @decorated_event.toggle_visible %></a></li>
-              <li><%= link_to "New Event", new_organizer_event_path(@event), class: "" %></li>
-              <li><%= link_to "Edit Event", edit_organizer_event_path(@event), class: "" unless @event.state_cancelled? %></li>
-              <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf"), class: "" %></li>
-              <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "" %></li>
-              <li><%= link_to "Check-in View", organizer_event_tickets_path(@event), class: "" unless @event.state_cancelled? %></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="accordion-group" is="event-accordian">
-        <div class="accordion-heading">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-            <i class="icon-filter"></i> Filter Orders <i class="icon-minus itoggle"></i>
-          </a>
-        </div>
-        <div id="collapseThree" class="accordion-body collapse in">
-          <div class="accordion-inner">
-            <ul class="nav nav-tabs nav-stacked">
-              <li><a href="<%= organizer_event_path(@event) %>">All<span class="badge badge-info pull-right"><%= @event.orders.sum(:quantity) %></span></a></li>
-              <li><a href="<%= request.path + '?pending=true' %>">Ordered<span class="badge badge-warning pull-right"><%= @event.orders.pending.sum(:quantity) %></span></a></li>
-              <li><a href="<%= request.path + '?tickets_sent=true' %>">Paid<span class="badge badge-success pull-right"><%= @event.orders.tickets_sent.sum(:quantity) %></span></a></li>
-              <li><a href="<%= request.path + '?failed=true' %>">Failed<span class="badge badge-important pull-right"><%= @event.orders.failed.sum(:quantity) %></span></a></li>
-              <li><a href="<%= request.path + '?refunded=true' %>">Refunded<span class="badge badge-inverse pull-right"><%= @event.orders.refunded.sum(:quantity) %></span></a></li>
-              <li><a href="<%= request.path + '?refunded=true' %>">Cancelled<span class="badge pull-right"><%= @event.orders.cancelled.sum(:quantity) %></span></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </aside>
-  <div class="span9">
-      <table class="table table-striped table-bordered" id="organizer-customers">
-        <thead>
-          <tr>
-            <th>
-              <button type="button" id="check_all", class="btn btn-mini">
-                <i class="icon-ok"></i>
-              </button>
-            </th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Admits:</th>
-            <th>Order Total</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @orders.each do |order| %>
-          <tr>
-            <td><%= check_box_tag "order_ids[]", order.id %> </td>
-            <td><%= order.name %> </td>
-            <td><%= order.email %> </td>
-            <td> <%= order.quantity %></td>
-            <td> <%= number_to_currency(order.total) %></td>
-            <td> <span class="label"><%= order.stripe_event  %></span> </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <%= will_paginate @orders %>
-  </div> <!-- /table form -->
-</div> <!-- /row -->
+    </aside>
+    <div class="span9">
+        <table class="table table-striped table-bordered" id="organizer-customers">
+          <thead>
+            <tr>
+              <th>
+                <button type="button" id="check_all", class="btn btn-mini">
+                  <i class="icon-ok"></i>
+                </button>
+              </th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Admits:</th>
+              <th>Order Total</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @orders.each do |order| %>
+            <tr>
+              <td><%= check_box_tag "order_ids[]", order.id %> </td>
+              <td><%= order.name %> </td>
+              <td><%= order.email %> </td>
+              <td> <%= order.quantity %></td>
+              <td> <%= number_to_currency(order.total) %></td>
+              <td> <span class="label"><%= order.stripe_event  %></span> </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <%= will_paginate @orders %>
+    </div> <!-- /table form -->
+  </div> <!-- /row -->
+  <% end %>
 <% end %>
