--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -2,7 +2,7 @@
 
 
   <fieldset>
-    <%= f.input :visible, :label => "Publish Event?" %>
+    <%= f.input(:visible, :label => "Publish Event?") unless current_user.state_unconfirmed? %>
     <%= f.input :title, label: "Event Title", placeholder: "A Headline for your Event" %>
     <%= f.input :artist, label: "Artists", placeholder: "List the Performers / Attractions" %>
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
