order mailer tdded

--- a/app/views/order_mailer/event_deferred.text.erb
+++ b/app/views/order_mailer/event_deferred.text.erb
@@ -1,3 +1,9 @@
-OrderMailer#event_deferred
+Your Event has been Deferred
 
-<%= @greeting %>, find me in app/views/app/views/order_mailer/event_deferred.text.erb
+The new date is xx-xx-xx
+
+Your promoter gave the following reason for the delay
+
+Click the link to cancel your order.
+
+Thanks!
