--- a/app/views/application/_user_profile.html.erb
+++ b/app/views/application/_user_profile.html.erb
@@ -1,35 +1,16 @@
 <% unless current_user.guest? %>
-  <div id="user-profile" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h3 id="myModalLabel">User Profile</h3>
-    </div>
-    <div class="modal-body">
-      <div class="container">
-        <div class="row-fluid">
-          <div class="span6 user-account">
-            <dl>
-              <dt>Name</dt>
-              <dd><i class="icon-edit"></i><%= current_user.user_name %></dd>
-              <dt>Email</dt>
-              <dd><i class="icon-edit"></i><%= current_user.user_email %></dd>
-              <dt>Password</dt>
-              <dd><%= current_user.password_reset %></dd>
-              <dt>Payments</dt>
-              <% if current_user.api_key %>
-                <dd><a href="#" class="stripe-connect light-blue dark"><span>Connected to Stripe <i class="icon-ok"></i></span></a></dd>
-              <% else %>
-                <dd><a href="/auth/stripe_connect" class="stripe-connect dark"><span>Connect with Stripe</span></a></dd>
-              <% end %>
-            </dl>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="modal-footer">
-        <%#= f.submit "Save", class: "btn btn-primary" %>
-       <button class="btn" data-dismiss="modal">Done</button>
-    </div>
-  </div>
-  <%# end %>
+    <dl class="dl-horizontal">
+      <dt>Name</dt>
+      <dd><i class="icon-edit"></i><%= current_user.user_name %></dd>
+      <dt>Email</dt>
+      <dd><i class="icon-edit"></i><%= current_user.user_email %></dd>
+      <dt>Password</dt>
+      <dd><%= current_user.password_reset %></dd>
+      <dt>Payments</dt>
+      <% if current_user.api_key %>
+        <dd><a href="#" class="stripe-connect light-blue dark"><span>Connected to Stripe <i class="icon-ok"></i></span></a></dd>
+      <% else %>
+        <dd><a href="/auth/stripe_connect" class="stripe-connect dark"><span>Connect with Stripe</span></a></dd>
+      <% end %>
+    </dl>
 <% end %>
