--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -49,15 +49,29 @@
           <div class="tab-pane active" id="event-tab">
             <%= simple_form_for :defer_event, url: defer_organizer_event_path, method: :post, html: {class: 'form-horizontal'} do |f| %>
             <legend>Defer Event</legend>
-              <%= f.input :date, as: :datepicker, label: "Select a new date for your event" %>
-              <%= f.input :message, as: :text, :input_html => { :cols => 5, :rows => 3 }, label: "Add an explanation for your customers" %>
-              <%= f.submit "Defer Event", data: { confirm: "Are you sure?"}, class: "btn" %>
+              <%= f.input :date, as: :datepicker, label: "Select a new date for your event", placeholder: "Current Date is #{@event.date.strftime('%d %b %Y')}" %>
+              <%= f.input :message, as: :text, :input_html => { :cols => 5, :rows => 3 }, label: "Add an explanation for the deferral", placeholder: "Why should your customers keep supporting your event?" %>
+              <%= f.submit "Proceed", data: { confirm: "Are you sure?"}, class: "btn" %>
             <% end %>
           </div>
           <div class="tab-pane" id="sales-tab">
             <div class="row-fluid">
-              <div class="span3 pagination-centered">
-                <%= link_to "Cash Orders", charge_all_orders_path(@event), method: :post, class: "btn btn-success btn", data: {confirm: 'Sure?'} %>
+              <div class="span12">
+                <legend>Sales</legend>
+              </div>
+            </div>
+            <div class="row-fluid">
+              <div class="span3">
+                <h5>
+                  <% if @orders.any?(&:stripe_event_tickets_sent?) %>
+                    <a href="#" class="btn btn-success">Orders Processed <i class="icon-ok"></i></a>
+                  <% else %>
+                    <%= link_to "Cash Orders", charge_all_orders_path(event_id: @event.id), method: :post, class: "btn btn-success", data: {confirm: 'Sure?'} %>
+                  <% end %>
+                </h5>
+                <h5>
+                  <%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
+                </h5>
               </div>
               <div class="span9">
                 <table class="table table-striped table-bordered" id="organizer-customers">
@@ -65,6 +79,7 @@
                     <tr>
                       <th>Name</th>
                       <th>Email</th>
+                      <th>UUID</th>
                       <th>Quantity</th>
                       <th>Order Total</th>
                       <th>Status</th>
@@ -75,6 +90,7 @@
                     <tr>
                       <td><%= order.name %> </td>
                       <td><%= order.email %> </td>
+                      <td><%= order.uuid %> </td>
                       <td><%= order.quantity %></td>
                       <td><%= number_to_currency(order.total) %></td>
                       <td><%= order.stripe_event %></td>
@@ -88,23 +104,39 @@
           </div>
           <div class="tab-pane" id="tickets-tab">
             <div class="row-fluid">
-                <div class="span3">
+              <div class="span12">
+                <legend>Tickets</legend>
+              </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span6">
                   <h5><span class="badge large-badge badge-info"><%= @tickets.where('admitted is not null').count %> of <%= @tickets.count %> Admitted </span></h5><br>
                   <%= form_tag organizer_event_tickets_path(@event), method: :get, class: "form-search", autocomplete: :off do %>
                       <%= number_field_tag :query, params[:query], class: "input-medium", placeholder: "Enter Ticket Number" %>
                       <button type="submit" class="btn">Check</button>
                   <% end %>
+                  <h5>
+                    <%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "btn" %>
+                    </ul>
+                  </h5>
                 </div>
-                <div class="span9">
+                <div class="span6">
                   <table class="table table-striped">
                     <tbody>
+                        <tr>
+                          <th>Number</th>
+                          <th>Name</th>
+                          <th>Email</th>
+                          <th>Card</th>
+                          <th>Admitted?</th>
+                        </tr>
                       <% @tickets.each do |ticket| %>
                         <tr>
-                          <td>Number <%= ticket.number %></td>
-                          <td>Name <%= @ticket.order.name %></td>
-                          <td>Email <%= @ticket.order.email %></td>
-                          <td>Card #<%= @ticket.order.last4 %></td>
-                          <td>Admitted? <%= @ticket.admitted %> </td>
+                          <td><%= ticket.number %></td>
+                          <td><%= ticket.order.name %></td>
+                          <td><%= ticket.order.email %></td>
+                          <td><%= ticket.order.last4 %></td>
+                          <td><%= ticket.admitted ? ticket.admitted.strftime("%e-%m-%y %H:%M") : "no" %> </td>
                         </tr>
                       <% end %>
                     </tbody>
