--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,30 +8,11 @@
 <% if @event.visible? || @event.event_owner? %>
 	<div class="container" id="event-background">
 		<% if @event.event_owner? %>
-		<div class="admin-bar">
-			<ul class="inline pull-right">
-			  <li><%= @event.private_or_public %></li>
-			  <li>
-			  	<div class="dropdown">
-		        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-		          <h4><i class="icon-cog"></i>event settings</h4>
-		        </a>
-		        <ul class="dropdown-menu">
-							<li><%= @event.edit %></li>
-							<li><%= link_to "Event Admin", organizer_event_path(@event) %>
-							<li><a href="#"><%= @event.toggle_visible %></a></li>
-							<li><%= @event.filepicker %></li>
-							<li><%= link_to "Copy Event", duplicate_organizer_event_path(@event) %></li>
-							<li><%= link_to "Delete Event", organizer_event_path(@event), method: :delete, data: { confirm: "Are you sure you want to cancel the current event?" } %></li>
-		        </ul>
-		      </div>
-			   </li>
-			</ul>
-		</div>
 		<% end %>
 		<section id="event-information">
 			<div class="row-fluid">
 				<div class="span12 event-header">
+					<div class="pull-right"><%= @event.filepicker %></div>
 					<h2>
 						<small><%= @event.edit_icon %> <%= @organizer.user_name || "organizer's business name" %> presents </small><br>
 						<%= @event.edit_icon %> <%= @event.bip_title %><br>
@@ -43,7 +24,7 @@
 							<a href="#event-vimeo"><i class="icon-film"></i></a>
 							<a href="#about"><i class="icon-info-sign"></i></a>
 							<a href="#bio"><i class="icon-quote-left"></i></a><br>
-							<%= @event.location.city %>
+							<a href="#location"><i class="icon-edit"></i> <%= @event.location.city %></a>
 						</small>
 					</h2>
 				</div>
