broke notifiers for easier testing of methods and name consistency

--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -227,7 +227,7 @@
                     <% if current_user.api_key %>
                       <a href="#" class="stripe-connect light-blue dark"><span>Connected to Stripe <i class="icon-ok"></i></span></a>
                     <% else %>
-                      <a href="/auth/stripe_connect" class="stripe-connect dark btn-block"><span>Connect with Stripe</span></a>
+                      <a href="/auth/stripe_connect" class="stripe-connect dark btn-medium"><span>Connect with Stripe</span></a>
                     <% end %>
                   </div>
                 <% end %>
