--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,34 +14,31 @@
     </div>
   </div>
 </div>
-<div class="landing-info">
+<div class="landing-info container small-container">
   <div class="row-fluid">
-    <div class="span6 well">
-      <h3 class=""><i class="icon-magic"></i> Features</h3>
-      <hr>
+    <div class="span6 offset6">
+      <h3 class="">Features</h3>
       <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits, take as long as you need.</p>
-      <%= link_to "More", info_path(anchor: "getting-started"), class: "btn btn-large" %>
-    </div>
-    <div class="span6 well">
-      <h3 class=""><i class="icon-money"></i> Fees</h3>
-      <hr>
-      <p class="lead">Total is equal to 3.9% + 30c per transaction added-on (you keep the full ticket price), full refunds including fees.</p>
-      <%= link_to "More", info_path(anchor: "payments"), class: "btn btn-large" %>
     </div>
   </div>
   <div class="row-fluid">
-    <div class="span6 well">
-      <h3 class=""><i class="icon-beaker"></i> Beta</h3>
-      <hr>
+    <div class="span6 offset6">
+      <h3 class="">Fees</h3>
+      <p class="lead">Total is equal to 3.9% + 30c per transaction added-on (you keep the full ticket price), full refunds including fees.</p>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span6 offset6">
+      <h3 class="">Beta</h3>
       <p class="lead">If you want to participate (please do!) be aware that some restrictions apply.</p>
-      <%= link_to "More", info_path(anchor: "beta"), class: "btn btn-large" %>
     </div>
-    <div class="span6 well">
-      <h3 class=""><i class="icon-music"></i> For Artists</h3>
-      <hr>
+  </div>
+  <div class="row-fluid">
+    <div class="span6 offset6">
+      <h3 class="">For Artists</h3>
       <p class="lead">Built by independent Artists for the love of good music, late nights and adventure.</p>
-      <%= link_to "More", info_path(anchor: ""), class: "btn btn-large" %>
     </div>
+  </div>
   </div>
   <div class="row-fluid">
     <div class="try-it-now pagination-centered span12">
