--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <![endif-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body id="<%= params[:controller].parameterize %>_controller">
+  <body id="<%= params[:controller].parameterize %>_controller" class="not-landing">
     <div class="wrapper">
       <div class="navbar">
         <div class="navbar-inner">
