--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -14,12 +14,15 @@
        height: 45px;
        margin: 0;
     }
+    a {
+      color: $white;
+    }
   }
 }
 //
 
 .splash-image {
-  height: 100%;
+  // height: 100%;
 }
 
 .narrow-container {
@@ -74,6 +77,7 @@
     }
   }
   a {
+    color: $white;
     @include media-below($handheld-max){
       font-size: 90%;
       line-height: 90%;
@@ -81,6 +85,14 @@
   }
   #try-it-button {
     margin-bottom: 20px;
+  }
+}
+
+#learn-more-scroll {
+  postion: absolute;
+  bottom: 0;
+  a {
+    color: $white;
   }
 }
 
@@ -93,21 +105,19 @@
     line-height: 110%;
     }
   }
-  // background-image: url(image_path('weave.png'));
 }
 
-.landing-image {
-  // width: 100%;
+.landing {
   padding: 10px;
 }
 
 .try-it-now {
   display: block;
-  // width: 100%;
   padding: 50px;
-  // margin-bottom: 20px;
-  // background-image: url(image_path('weave.png'));
   color: #E9E6E6;
+  a {
+    color: $white;
+  }
 }
 
 #side-menu  {
