--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="landing-image">
+<div class="landing">
   <div class="big-logo">
     <% unless current_user %>
       <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
@@ -12,9 +12,12 @@
       <div class="span3 offset1"><%= new_or_view_event %></div>
       <div class="span6 search"><%= render 'search' %></div>
     </div>
+    <div class="row-fluid">
+      <div class="span2 offset8"><a href="#info-section"> learn more <i class="icon-chevron-sign-down"></i></a></div>
+    </div>
   </div>
 </div>
-<div class="landing-info container small-container">
+<div class="landing-info container small-container" id="info-section">
   <div class="row-fluid">
     <div class="span6 offset6">
       <h3 class="">Features</h3>
@@ -42,7 +45,7 @@
   </div>
   <div class="row-fluid">
     <div class="try-it-now pagination-centered span12">
-      <p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= new_or_view_event %>
+      <p class="lead"><%= link_to "Read more about how it works or", info_path %></p> <%= new_or_view_event %>
     </div>
   </div>
 </div>
